--- a/public/css/member/body.css
+++ b/public/css/member/body.css
@@ -161,6 +161,13 @@ body {
     height: 600px;
 }
 
+.content .show-line1 {
+    margin: 10px 0 0 20px;
+    padding: 8px 10px 8px 10px;
+
+    background: white;
+}
+
 .content .form1 {
     padding: 10px;
 
