layout: 權限查看頁面設計

--- a/public/css/member/body.css
+++ b/public/css/member/body.css
@@ -236,7 +236,7 @@ body {
 
 .content .table1 tbody tr:hover {
     color: white;
-    background: #7a7ad1;
+    background: #2eb8b8;
 }
 
 .content .table1 td {
